test/T3/Fail/UnDeclaredAssign.ic

class B{

	void c(){
		a = "hello";
	}

	static void main(string[] args)
	{
	}
}
